hero text on tablet view fix

--- a/src/styles/breakpoints.scss
+++ b/src/styles/breakpoints.scss
@@ -1,5 +1,3 @@
-/* @import "colors.scss"; */
-
 @mixin widthChanger($width) {
   .breakpoint-changer {
     width: $width;
@@ -107,18 +105,6 @@ footer {
   .content {
     .hero {
       .card {
-        .hero-text {
-          .card-body {
-            h5.card-title {
-              font-size: 2.75rem;
-              line-height: 3.38rem;
-            }
-            .card-text {
-              font-size: 0.9rem;
-              line-height: 1.5rem;
-            }
-          }
-        }
         .hero-watch-white-bg {
           display: none;
         }
@@ -193,6 +179,27 @@ footer {
     }
   }
 }
+@media (min-width: 576px) and (max-width: 991.98px) {
+  .content {
+    .hero {
+      .card {
+        .hero-text {
+          .card-body {
+            h5.card-title {
+              font-size: 2.75rem;
+              line-height: 3rem;
+            }
+            .card-text {
+              font-size: 0.9rem;
+              line-height: 1.4rem;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
 @media (min-width: 992px) {
   @include widthChanger(972px);
   .dark-hero-bg {
